syntax = "proto3";

option csharp_namespace = "GrpcAgeny";

package GrpcAgeny;

service Publisher {
  rpc PublishMessage (PublishRequest) returns (PublishReply);
}

message PublishRequest {
  string topic = 1;
  string content = 2;
}

message PublishReply {
  bool isSuccess = 1;
}
